--- a/.ci_support/linux_64_numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/linux_64_numpy1.23python3.11.____cpython.yaml
@@ -1,11 +1,21 @@
 c_stdlib:
-- vs
+- sysroot
+c_stdlib_version:
+- '2.17'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2019
+- gxx
+cxx_compiler_version:
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
+numpy:
+- '1.23'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -15,7 +25,10 @@ python:
 python_impl:
 - cpython
 target_platform:
-- win-64
+- linux-64
 zip_keys:
+- - c_stdlib_version
+  - cdt_name
 - - python
+  - numpy
   - python_impl
