--- a/.ci_support/win_64_numpy1.22python3.10.____cpython.yaml
+++ b/.ci_support/win_64_numpy1.22python3.10.____cpython.yaml
@@ -1,23 +1,13 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 c_stdlib:
-- sysroot
-c_stdlib_version:
-- '2.17'
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '12'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- vs2019
+numpy:
+- '1.22'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -27,9 +17,8 @@ python:
 python_impl:
 - cpython
 target_platform:
-- linux-aarch64
+- win-64
 zip_keys:
-- - c_stdlib_version
-  - cdt_name
 - - python
+  - numpy
   - python_impl
