--- a/.ci_support/win_64_numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/win_64_numpy1.23python3.11.____cpython.yaml
@@ -1,31 +1,24 @@
 c_stdlib:
-- sysroot
-c_stdlib_version:
-- '2.12'
-cdt_name:
-- cos6
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '12'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- vs2019
+numpy:
+- '1.23'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.11.* *_cpython
 python_impl:
 - cpython
 target_platform:
-- linux-64
+- win-64
 zip_keys:
-- - c_stdlib_version
-  - cdt_name
 - - python
+  - numpy
   - python_impl
