--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,9 @@ source:
   sha256: 4b37ebd25ada4059b0dc9e0893e70dde5df83485329a068ef04580e70892a65d
   patches:
     - patches/0001-skip-beam-density-test.patch
+    # for some reason cython 0.29 picks a non-default (and broken on 3.12)
+    # profile=True for _one_ particular file; suppress it
+    - patches/0002-explicitly-set-profile-False-in-levenshtein.pyx.patch    # [py>=312]
 
 build:
   number: 0
