--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,11 @@
-{% set name = "spacy" %}
 {% set version = "3.8.8" %}
 
 package:
-  name: {{ name|lower }}
+  name: spacy
   version: {{ version }}
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/spacy-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/s/spacy/spacy-{{ version }}.tar.gz
   sha256: 08b933bd1f0f47f59321fe730a06c645120084719e718960a2e596a3728aea84
   patches:
     - patches/0001-skip-beam-density-test.patch
@@ -78,7 +77,7 @@ test:
     # due to missing https://github.com/explosion/ml-datasets
     {% set tests_to_skip = tests_to_skip + " or test_registry_entries" %}
     # avoid long runtime in emulation
-    - python -m pytest --tb=native --pyargs {{ name }} -k "not ({{ tests_to_skip }})"  # [not (aarch64 or ppc64le)]
+    - python -m pytest --tb=native --pyargs spacy -k "not ({{ tests_to_skip }})"    # [not (aarch64 or ppc64le)]
 
 about:
   home: https://spacy.io/
